add item to list

--- a/src/Rain.css
+++ b/src/Rain.css
@@ -2,7 +2,7 @@ html, body {
     height: 100%;
     margin: 0;
     overflow: hidden;
-    background: #412b5a;
+    background: #241e2a;
   }
   
   .rain-effect-container {
